# AlphaPredator

./: .gitignore  AGENTS.md  README.md  agent.md  fix.md  phase.md  progress.md
backend/: generate_stock_list.py  import_stock_list.py  pyproject.toml  sniff_jygs_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: logging.py  settings.py
backend/app/db/: __init__.py  duckdb.py  duckdb_storage.py  schema.sql  session.py  sqlite.py
backend/app/models/: __init__.py  sqlite_models.py
backend/app/modules/: __init__.py
backend/tests/: test_ai_stock_atomic_capabilities.py  test_ai_stock_queries_and_base.py  test_hot_sector_image_importer.py  test_initializer_snapshots.py  test_jygs_auth_file.py  test_jygs_flow_trace_and_auth.py  test_jygs_playwright_browser.py  test_jygs_repo.py  test_jygs_request_headers.py  test_limit_rules.py  test_macd_alert_api.py  test_macd_alert_service.py  test_mairui_config.py  test_mairui_live_data_source.py  test_market_data_5m_import.py  test_market_data_importer.py  test_market_data_rate_limit.py  test_market_metadata_repo.py  test_market_queries.py  test_mcp_basic.py  test_phase29_initializer.py  test_phase2_hot_review_api.py  test_sqlite_models_smoke.py  test_stock_detail_indicators.py  test_stock_linkage_api.py  test_stock_linkage_api_results.py  test_stock_linkage_schema.py  test_stock_linkage_service.py  test_stock_list_cnspell.py  test_stock_repositories.py  test_trade_review_ocr_parser.py  test_trade_review_service.py  test_tushare_rate_limit.py  test_v2_initializer.py
(+138 files in other folders)
