[project]
name = "alphapredator-backend"
version = "0.1.0"
description = "AlphaPredator backend service"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.1",
  "fastapi>=0.115.11",
  "pydantic>=2.10.6",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
