[project]
name = "alphapredator-backend"
version = "0.1.0"
description = "AlphaPredator backend service"
requires-python = ">=3.11"
dependencies = [
  "python-multipart>=0.0.9",
  "pandas>=2.2.0",
    "pypinyin>=0.54.0",
  "duckdb>=1.2.1",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "onnxruntime>=1.24.0",
  "pydantic>=2.10.6",
  "rapidocr>=3.8.1",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
